# esamelabanas

./: CMakeLists.txt  ContoCorrente.cpp  ContoCorrente.h  Transazione.cpp  Transazione.h  main.cpp
test/: CMakeLists.txt  ContoCorrenteTest.cpp  TransazioneTest.cpp
